packages/poetry-exp/poetry_exp-0.1.1-py3-none-any.whl/poetry_exp/mypy/app/fast_api_exp/k8s_fast_api4_ingress/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-service
  labels:
    service: fastapi-service
spec:
  selector:
    app: fastapiapp  # should match with deployments->spec->selector->matchLabels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000 # should match with containerPort in deployment->template



## Do kubectl describe service to know the service points to which pods, in endpoints you can check the ip and port
# selectors, do kubectl get pods -o wide, you will get the ip of each pod, which can be match to service endpoints
