packages/poetry-exp/poetry_exp-0.1.1-py3-none-any.whl/poetry_exp/mypy/app/fast_api_exp/k8s_fast_api4_ingress/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-app-ingress
  annotations:
    ingressClassName: nginx
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: fastapi-app-service
      port:
        number: 8000
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: fastapi-app-service  # This should match with service->metadata->name
            port:
              number: 8000
